Initial detail page styling and other layout fixes [WIP] (#2429)
* Initial detail page styling and other layout fixes
* Fixing some conditional styling with open and closed issues
* Fixing some layout issues with sidebar and adding dynamic status to detail view
* More detail page adjustments. Tag styling. Adjusting list view.
* Fixing target area on row links

--- a/apps/zbugs/src/index.css
+++ b/apps/zbugs/src/index.css
@@ -15,10 +15,16 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
+  /* Color */
   --color-text-primary: rgba(255, 255, 255, 0.85);
   --color-text-primary-active: rgba(255, 255, 255, 1);
   --color-primary-cta: rgba(255, 92, 0, 1);
-  --color-nav-selected: rgba(48, 48, 48, 1);
+  --color-nav-selected: rgba(30, 30, 30, 1);
+  --color-nav-highlight: rgba(40, 40, 40, 1);
+
+  /* Typography */
+  --typo-label-size: 0.875rem;
+  --typo-label-weight: 800;
 }
 
 a {
@@ -37,6 +43,17 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+}
+
+.app-container {
+  width: 100vw;
+}
+
+/* Nav */
+
+.zero-logo {
+  width: 100%;
+  height: auto;
 }
 
 .primary-cta {
@@ -73,7 +90,10 @@ h1 {
   background-color: var(--color-nav-selected);
 }
 
+/* Primary Content Panel */
+
 .primary-content {
+  width: 100%;
   padding-left: 16rem;
 }
 
@@ -82,19 +102,132 @@ h1 {
 }
 
 .primary-content td {
-  padding: 1rem 0;
   box-shadow: 0px -1px 0px 0px rgba(62, 62, 62, 0.39) inset;
+}
+
+.primary-content td a {
+  display: block;
+  padding: 1rem 0;
 }
 
 .primary-content .issue-title {
   padding-left: 1.75rem;
-  background: transparent url(assets/images/issue-open.svg) no-repeat center
-    left;
+  background: transparent url(assets/icons/issue-open.svg) no-repeat center left;
+}
+
+.primary-content .issue-open {
+  background: transparent url(assets/icons/issue-open.svg) no-repeat left center;
+}
+
+.primary-content .issue-closed {
+  background: transparent url(assets/icons/issue-closed.svg) no-repeat left
+    center;
 }
 
 /* Issue Detail */
 
+.issue-detail-container {
+  width: 100%;
+}
+
+.issue-detail {
+  padding-right: 16rem;
+}
+
+.issue-sidebar {
+  position: fixed;
+  top: 2rem;
+  right: 2rem;
+  display: flex;
+  flex-direction: column;
+  width: 12rem;
+}
+
+.sidebar-item {
+  margin-bottom: 2rem;
+}
+
+.sidebar-button {
+  background-color: var(--color-nav-selected);
+  display: block;
+  padding: 0.8175rem;
+  border-radius: 0.5rem;
+}
+
+.sidebar-status-open {
+  padding-left: 2.5rem;
+  background: var(--color-nav-selected) url(assets/icons/issue-open.svg)
+    no-repeat 0.8175rem center;
+}
+
+.sidebar-status-closed {
+  padding-left: 2.5rem;
+  background: var(--color-nav-selected) url(assets/icons/issue-closed.svg)
+    no-repeat 0.8175rem center;
+}
+
+.issue-detail-title {
+  font-size: 2rem;
+  font-weight: 800;
+  margin: 1.5rem 0;
+}
+
+.issue-detail-label {
+  font-size: var(--typo-label-size);
+  font-weight: var(--typo-label-weight);
+  margin-bottom: 1rem;
+}
+
+.issue-detail p {
+  word-wrap: break-word;
+  overflow: hidden;
+}
+.issue-detail a {
+  word-break: break-all;
+  overflow: hidden;
+}
+
+.comments-container {
+  margin-top: 4rem;
+}
+
+.comment-item {
+  margin-bottom: 1rem;
+  background-color: var(--color-nav-selected);
+  padding: 1rem;
+  border-radius: 0.5rem;
+}
+
+.comment-item:last-child {
+  margin-bottom: 0;
+}
+
+.comment-author {
+  font-weight: 700;
+  margin-bottom: 1rem;
+}
+
+.label-item {
+  background: var(--color-nav-selected) url(assets/icons/label.svg) 0.375rem
+    center no-repeat;
+  padding: 0.5rem 0.5rem 0.5rem 1.625rem;
+  border-radius: 0.5rem;
+  transition: background-color 0.3s ease;
+  margin-right: 0.5rem;
+}
+
+.label-item:last-child {
+  margin-right: 0;
+}
+
+.label-item:hover {
+  background-color: var(--color-nav-highlight);
+  cursor: pointer;
+}
+
 .breadcrumb-item {
+  font-size: var(--typo-label-size);
+  font-weight: var(--typo-label-weight);
   padding-right: 0.25rem;
 }
 
